@@ -35,9 +35,10 @@ dnl is only present in the BSD versions of getopt(3).
 dnl
 dnl Defines HAVE_GETOPT_WITH_OPTRESET if optreset exists.
 AC_DEFUN([_KYUA_GETOPT_WITH_OPTRESET], [
-    AC_MSG_CHECKING([whether getopt has optreset])
-
-    AC_COMPILE_IFELSE([AC_LANG_SOURCE([
+    AC_CACHE_CHECK(
+        [whether getopt has optreset],
+        [kyua_cv_getopt_optreset], [
+        AC_COMPILE_IFELSE([AC_LANG_SOURCE([
 #include <stdlib.h>
 #include <unistd.h>
 
@@ -48,12 +49,13 @@ main(void)
     return EXIT_SUCCESS;
 }
 ])],
-    [getopt_optreset=yes
-     AC_DEFINE([HAVE_GETOPT_WITH_OPTRESET], [1],
-               [Define to 1 if getopt has optreset])],
-    [getopt_optreset=no])
-
-    AC_MSG_RESULT([${getopt_optreset}])
+        [kyua_cv_getopt_optreset=yes],
+        [kyua_cv_getopt_optreset=no])
+    ])
+    if test "${kyua_cv_getopt_optreset}" = yes; then
+        AC_DEFINE([HAVE_GETOPT_WITH_OPTRESET], [1],
+                  [Define to 1 if getopt has optreset])
+    fi
 ])
 
 
@@ -67,9 +69,10 @@ dnl
 dnl Sets the GETOPT_OPTIND_RESET_VALUE macro to the integer value that has to
 dnl be passed to optind to reset option processing.
 AC_DEFUN([_KYUA_GETOPT_OPTIND_RESET_VALUE], [
-    AC_MSG_CHECKING([for the optind value to reset getopt processing])
-
-    AC_RUN_IFELSE([AC_LANG_SOURCE([
+    AC_CACHE_CHECK(
+        [for the optind value to reset getopt processing],
+        [kyua_cv_getopt_optind_reset_value], [
+        AC_RUN_IFELSE([AC_LANG_SOURCE([
 #include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
@@ -142,12 +145,12 @@ main(void)
     return EXIT_SUCCESS;
 }
 ])],
-    [optind_reset_value=0],
-    [optind_reset_value=1])
-
-    AC_DEFINE_UNQUOTED([GETOPT_OPTIND_RESET_VALUE], [${optind_reset_value}],
+        [kyua_cv_getopt_optind_reset_value=0],
+        [kyua_cv_getopt_optind_reset_value=1])
+    ])
+    AC_DEFINE_UNQUOTED([GETOPT_OPTIND_RESET_VALUE],
+        [${kyua_cv_getopt_optind_reset_value}],
         [Define to the optind value to reset getopt processing])
-    AC_MSG_RESULT([${optind_reset_value}])
 ])
 
 
