@@ -41,13 +41,15 @@ AC_DEFUN([KYUA_MEMORY], [
 
     _KYUA_SYSCTLBYNAME([have_sysctlbyname=yes], [have_sysctlbyname=no])
     if test "${have_sysctlbyname}" = yes; then
-        for mib in hw.usermem64 hw.usermem; do
-            _KYUA_SYSCTL_MIB([${mib}], [
-                memory_query=sysctlbyname
-                memory_mib="${mib}"
-                break
-            ], [])
-        done
+        _KYUA_SYSCTL_MIB([hw.usermem64], [hw_usermem64],
+                         [memory_mib="hw.usermem64"], [])
+        if test "${memory_mib}" = none; then
+            _KYUA_SYSCTL_MIB([hw.usermem], [hw_usermem],
+                             [memory_mib="hw.usermem"], [])
+        fi
+        if test "${memory_mib}" != none; then
+            memory_query=sysctlbyname
+        fi
     fi
 
     if test "${memory_query}" = unknown; then
@@ -79,11 +81,17 @@ dnl
 dnl \pre sysctlbyname(3) must be present in the system.
 dnl
 dnl \param mib_name The name of the MIB to check for.
+dnl \param flat_mib_name The name of the MIB as a shell variable, for use in
+dnl     cache variable names.  This should be automatically computed with
+dnl     m4_bpatsubst or similar, but my inability to make the code readable
+dnl     made me add this parameter instead.
 dnl \param action_if_found Code to run if the MIB is found.
 dnl \param action_if_not_found Code to run if the MIB is not found.
 AC_DEFUN([_KYUA_SYSCTL_MIB], [
-    AC_MSG_CHECKING([for if the $1 sysctl MIB exists])
-    AC_RUN_IFELSE([AC_LANG_PROGRAM([
+    AC_CACHE_CHECK(
+        [if the $1 sysctl MIB exists],
+        [kyua_cv_sysctl_$2], [
+        AC_RUN_IFELSE([AC_LANG_PROGRAM([
 #if defined(HAVE_SYS_TYPES_H)
 #   include <sys/types.h>
 #endif
@@ -103,8 +111,12 @@ AC_DEFUN([_KYUA_SYSCTL_MIB], [
     else
         return EXIT_SUCCESS;
 ])],
-    [AC_MSG_RESULT([yes])
-     $2],
-    [AC_MSG_RESULT([no])
-     $3])
+        [kyua_cv_sysctl_$2=yes],
+        [kyua_cv_sysctl_$2=no])
+    ])
+    if test "${kyua_cv_sysctl_$2}" = yes; then
+        m4_default([$3], [:])
+    else
+        m4_default([$4], [:])
+    fi
 ])
